Fixed some display bugs (adding a card moved up when only card in list; wrap in detail div)

--- a/website/addons/trello/static/trelloboard.css
+++ b/website/addons/trello/static/trelloboard.css
@@ -25,6 +25,7 @@ div.TrelloListBlock
 	display: inline-block;
 	cursor: default;
 	margin: 0 5px 20px;
+	min-height: 20px;
 }
 
 span.TrelloListName {
@@ -620,6 +621,7 @@ div.trello_card_detail_edit_name_group {
 }
 
 .trello_card_detail_card {
+	white-space: normal;
 	display: inline;
 	width: 600px;
 	height: 90%;
